// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-toggle creates hidden input field, if inside a form 1`] = `
<ld-toggle class="ld-toggle" name="example">
  <mock:shadow-root>
    <input name="example" part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
  <input name="example" type="checkbox" style="visibility: hidden; position: absolute; pointer-events: none;">
</ld-toggle>
`;

exports[`ld-toggle prevents input value changes with an aria-disabled attribute 1`] = `
<ld-toggle aria-disabled="true" class="ld-toggle">
  <mock:shadow-root>
    <input aria-disabled="true" part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
</ld-toggle>
`;

exports[`ld-toggle renders default 1`] = `
<ld-toggle class="ld-toggle">
  <mock:shadow-root>
    <input part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
</ld-toggle>
`;

exports[`ld-toggle renders disabled state 1`] = `
<ld-toggle class="ld-toggle" disabled="">
  <mock:shadow-root>
    <input disabled="" part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
</ld-toggle>
`;

exports[`ld-toggle renders large mode 1`] = `
<ld-toggle class="ld-toggle ld-toggle--lg" size="lg">
  <mock:shadow-root>
    <input part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
</ld-toggle>
`;

exports[`ld-toggle renders with icons 1`] = `
<ld-toggle class="ld-toggle ld-toggle--with-icons">
  <mock:shadow-root>
    <input part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
    <div class="ld-toggle__icon-start" part="icon-wrapper icon-wrapper-start">
      <slot name="icon-start"></slot>
    </div>
    <div class="ld-toggle__icon-end" part="icon-wrapper icon-wrapper-end">
      <slot name="icon-end"></slot>
    </div>
  </mock:shadow-root>
  <ld-icon class="ld-icon ld-icon--sm" name="placeholder" role="presentation" size="sm" slot="icon-start">
    <mock:shadow-root>
      Not Found
    </mock:shadow-root>
  </ld-icon>
  <ld-icon class="ld-icon ld-icon--sm" name="placeholder" role="presentation" size="sm" slot="icon-end">
    <mock:shadow-root>
      Not Found
    </mock:shadow-root>
  </ld-icon>
</ld-toggle>
`;

exports[`ld-toggle updates checked prop on checked value change 1`] = `
<ld-toggle checked="" class="ld-toggle">
  <mock:shadow-root>
    <input checked="" part="input focusable" type="checkbox">
    <span class="ld-toggle__knob" part="knob"></span>
  </mock:shadow-root>
</ld-toggle>
`;
